--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,20 @@
 services:
   web:
     build: .
+    volumes:
+      # - .:/app
+      - go-modules:/go/pkg/mod
+    working_dir: /app
     ports:
       - "3001:3001"
     depends_on:
       - db
+    env_file:
+      - .env
+    environment:
+      - DB_HOST=db
+    command: ./main  # This will run the built executable
+
   db:
     image: postgres
     environment:
@@ -19,4 +29,5 @@ services:
       - .env
 
 volumes:
+  go-modules:
   postgres_data:
