--- a/.env copy
+++ b/.env copy
@@ -1,6 +1,18 @@
-DB_TYPE=postgresql
-DB_NAME=postgres
-DB_HOST=localhost
-DB_PORT=5432
-DB_USER=postgres
-DB_PASSWORD=test
+DB_TYPE=
+DB_NAME=
+DB_HOST=
+DB_PORT=
+DB_USER=
+DB_PASSWORD=
+
+DWH_DB_TYPE=
+DWH_DB_NAME=
+DWH_DB_HOST=
+DWH_DB_PORT=
+DWH_DB_USER=
+DWH_DB_PASSWORD=
+
+KAFKA_BROKER=
+KAFKA_TOPIC=
+
+CMS_PORT=
